# Convex-2D-GPU-Collision-Detection

./: CMakeLists.txt  MC_uniform.cu  README.md  SAT.cu  SAT.py  SAT_cuda.py  argparser.h  balance_datasets.py  compute_collision_probability.cu  generate_dataset.cu  generate_dataset_tiago.cu  regenerate_data.cu  sat_cpu.cpp  show_data.ipynb  utils.cu  utils.h  ztest.cu
